--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -194,37 +194,38 @@ jobs:
     runs-on: windows-latest-8-cores
     timeout-minutes: 60
     steps:
-      - run: git config --global core.autocrlf false
-      - uses: actions/checkout@v3
-      - uses: arduino/setup-protoc@v1
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ env.RUST_TOOLCHAIN }}
-          components: llvm-tools-preview
-      - name: Rust Cache
-        uses: Swatinem/rust-cache@v2
-      - name: Install Cargo Nextest
-        uses: taiki-e/install-action@nextest
-      - name: Install Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-      - name: Install PyArrow Package
-        run: pip install pyarrow
-      - name: Install WSL distribution
-        uses: Vampire/setup-wsl@v2
-        with:
-          distribution: Ubuntu-22.04
-      - name: Running tests
-        run: cargo nextest run -F pyo3_backend,dashboard
-        env:
-          RUST_BACKTRACE: 1
-          CARGO_INCREMENTAL: 0
-          GT_S3_BUCKET: ${{ secrets.S3_BUCKET }}
-          GT_S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
-          GT_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
-          GT_S3_REGION: ${{ secrets.S3_REGION }}
-          UNITTEST_LOG_DIR: "__unittest_logs"
+      - run: 'echo "temporary disabled"'
+      # - run: git config --global core.autocrlf false
+      # - uses: actions/checkout@v3
+      # - uses: arduino/setup-protoc@v1
+      #   with:
+      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Install Rust toolchain
+      #   uses: dtolnay/rust-toolchain@master
+      #   with:
+      #     toolchain: ${{ env.RUST_TOOLCHAIN }}
+      #     components: llvm-tools-preview
+      # - name: Rust Cache
+      #   uses: Swatinem/rust-cache@v2
+      # - name: Install Cargo Nextest
+      #   uses: taiki-e/install-action@nextest
+      # - name: Install Python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: '3.10'
+      # - name: Install PyArrow Package
+      #   run: pip install pyarrow
+      # - name: Install WSL distribution
+      #   uses: Vampire/setup-wsl@v2
+      #   with:
+      #     distribution: Ubuntu-22.04
+      # - name: Running tests
+      #   run: cargo nextest run -F pyo3_backend,dashboard
+      #   env:
+      #     RUST_BACKTRACE: 1
+      #     CARGO_INCREMENTAL: 0
+      #     GT_S3_BUCKET: ${{ secrets.S3_BUCKET }}
+      #     GT_S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
+      #     GT_S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
+      #     GT_S3_REGION: ${{ secrets.S3_REGION }}
+      #     UNITTEST_LOG_DIR: "__unittest_logs"
