--- a/.github/actions/build-macos-artifacts/action.yml
+++ b/.github/actions/build-macos-artifacts/action.yml
@@ -34,6 +34,10 @@ inputs:
   aws-region:
     description: AWS region
     required: true
+  upload-to-s3:
+    description: Upload to S3
+    required: false
+    default: 'true'
 runs:
   using: composite
   steps:
@@ -103,3 +107,4 @@ runs:
         aws-access-key-id: ${{ inputs.aws-access-key-id }}
         aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
         aws-region: ${{ inputs.aws-region }}
+        upload-to-s3: ${{ inputs.upload-to-s3 }}
