chore: bump opendal to 0.40

--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -11,7 +11,7 @@ futures = { version = "0.3" }
 lru = "0.9"
 md5 = "0.7"
 metrics.workspace = true
-opendal = { git = "https://github.com/apache/incubator-opendal.git", rev = "7d5524f35f29f7eda8131e8b0873590b7cbe34ab", features = [
+opendal = { version = "0.40", features = [
     "layers-tracing",
     "layers-metrics",
 ] }
