--- a/src/auth/Cargo.toml
+++ b/src/auth/Cargo.toml
@@ -14,6 +14,7 @@ testing = []
 api.workspace = true
 async-trait.workspace = true
 common-error.workspace = true
+common-macro.workspace = true
 digest = "0.10"
 hex = { version = "0.4" }
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
