--- a/src/common/substrait/Cargo.toml
+++ b/src/common/substrait/Cargo.toml
@@ -11,6 +11,7 @@ bytes = "1.1"
 catalog = { workspace = true }
 common-catalog = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-telemetry = { workspace = true }
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
