--- a/src/common/time/Cargo.toml
+++ b/src/common/time/Cargo.toml
@@ -9,6 +9,7 @@ arrow.workspace = true
 chrono-tz = "0.8"
 chrono.workspace = true
 common-error = { workspace = true }
+common-macro = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 snafu = { version = "0.7", features = ["backtraces"] }
