--- a/src/file-engine/Cargo.toml
+++ b/src/file-engine/Cargo.toml
@@ -13,6 +13,7 @@ async-trait = "0.1"
 common-catalog = { workspace = true }
 common-datasource = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-procedure = { workspace = true }
 common-query = { workspace = true }
 common-recordbatch = { workspace = true }
