--- a/src/log-store/Cargo.toml
+++ b/src/log-store/Cargo.toml
@@ -18,6 +18,7 @@ bytes = "1.1"
 common-base = { workspace = true }
 common-config = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-meta = { workspace = true }
 common-runtime = { workspace = true }
 common-telemetry = { workspace = true }
