--- a/src/operator/Cargo.toml
+++ b/src/operator/Cargo.toml
@@ -20,6 +20,7 @@ common-catalog = { workspace = true }
 common-datasource = { workspace = true }
 common-error = { workspace = true }
 common-grpc-expr = { workspace = true }
+common-macro = { workspace = true }
 common-meta = { workspace = true }
 common-query = { workspace = true }
 common-recordbatch = { workspace = true }
