--- a/src/partition/Cargo.toml
+++ b/src/partition/Cargo.toml
@@ -11,6 +11,7 @@ api = { workspace = true }
 async-trait = "0.1"
 common-catalog = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-meta = { workspace = true }
 common-query = { workspace = true }
 common-telemetry = { workspace = true }
