--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -21,6 +21,7 @@ common-catalog.workspace = true
 common-datasource.workspace = true
 common-error.workspace = true
 common-function.workspace = true
+common-macro.workspace = true
 common-meta.workspace = true
 common-query.workspace = true
 common-recordbatch.workspace = true
