--- a/src/script/Cargo.toml
+++ b/src/script/Cargo.toml
@@ -32,6 +32,7 @@ catalog = { workspace = true }
 common-catalog = { workspace = true }
 common-error = { workspace = true }
 common-function = { workspace = true }
+common-macro = { workspace = true }
 common-query = { workspace = true }
 common-recordbatch = { workspace = true }
 common-runtime = { workspace = true }
