--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -27,6 +27,7 @@ common-catalog = { workspace = true }
 common-error = { workspace = true }
 common-grpc = { workspace = true }
 common-grpc-expr = { workspace = true }
+common-macro = { workspace = true }
 common-mem-prof = { workspace = true, optional = true }
 common-meta = { workspace = true }
 common-query = { workspace = true }
