--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -9,6 +9,7 @@ api = { workspace = true }
 common-base = { workspace = true }
 common-catalog = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-query = { workspace = true }
 common-time = { workspace = true }
 datafusion-sql.workspace = true
