--- a/src/storage/Cargo.toml
+++ b/src/storage/Cargo.toml
@@ -16,6 +16,7 @@ bytes = "1.1"
 common-base = { workspace = true }
 common-datasource = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-query = { workspace = true }
 common-recordbatch = { workspace = true }
 common-runtime = { workspace = true }
