--- a/src/store-api/Cargo.toml
+++ b/src/store-api/Cargo.toml
@@ -11,6 +11,7 @@ async-trait.workspace = true
 bytes = "1.1"
 common-base = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-query = { workspace = true }
 common-recordbatch = { workspace = true }
 common-time = { workspace = true }
