--- a/src/table/Cargo.toml
+++ b/src/table/Cargo.toml
@@ -15,6 +15,7 @@ common-base = { workspace = true }
 common-catalog = { workspace = true }
 common-datasource = { workspace = true }
 common-error = { workspace = true }
+common-macro = { workspace = true }
 common-procedure = { workspace = true }
 common-query = { workspace = true }
 common-recordbatch = { workspace = true }
