--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,7 +103,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 smallvec = "1"
 snafu = { version = "0.7", features = ["backtraces"] }
-sqlparser = { git = "https://github.com/GreptimeTeam/sqlparser-rs.git", rev = "296a4f6c73b129d6f565a42a2e5e53c6bc2b9da4", features = [
+sqlparser = { path = "/Users/greptime/data/sqlparser-rs", features = [
     "visitor",
 ] }
 strum = { version = "0.25", features = ["derive"] }
