--- a/src/partition/Cargo.toml
+++ b/src/partition/Cargo.toml
@@ -20,7 +20,7 @@ datafusion-expr.workspace = true
 datafusion.workspace = true
 datatypes = { workspace = true }
 meta-client = { workspace = true }
-moka = { version = "0.9", features = ["future"] }
+moka = { workspace = true, features = ["future"] }
 serde.workspace = true
 serde_json = "1.0"
 snafu.workspace = true
