--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -9,7 +9,7 @@ async-trait = "0.1"
 bytes = "1.4"
 common-runtime.workspace = true
 common-telemetry.workspace = true
-futures = { version = "0.3" }
+futures.workspace = true
 md5 = "0.7"
 metrics.workspace = true
 moka.workspace = true
@@ -17,11 +17,10 @@ opendal = { version = "0.40", features = [
     "layers-tracing",
     "layers-metrics",
 ] }
-pin-project = "1.0"
-tokio.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
 anyhow = "1.0"
 common-telemetry = { workspace = true }
 common-test-util = { workspace = true }
+tokio.workspace = true
