feat: support custom storage for every table(initial)

--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -43,9 +43,10 @@ sync_write = false
 [storage]
 # The working home directory.
 data_home = "/tmp/greptimedb/"
+# global_store = "File"
+# Storage type.
+[[storage.store]]
 type = "File"
-# TTL for all tables. Disabled by default.
-# global_ttl = "7d"
 
 # Cache configuration for object storage such as 'S3' etc.
 # The local file cache directory
