feat: init invalidate key cache in atomic opts (wip)

--- a/src/catalog/Cargo.toml
+++ b/src/catalog/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [features]
 testing = []
+# async_closure = [] # unstable feature!
 
 [dependencies]
 api = { workspace = true }
