--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -40,7 +40,7 @@ humantime-serde = { workspace = true }
 lazy_static = "1.4"
 memcomparable = "0.2"
 metrics.workspace = true
-moka.workspace = true
+moka = { workspace = true, features = ["sync"] }
 object-store = { workspace = true }
 parquet = { workspace = true, features = ["async"] }
 paste.workspace = true
