chore: add converter between RegionRequestHeader and QueryContext & update proto version

--- a/src/session/Cargo.toml
+++ b/src/session/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 testing = []
 
 [dependencies]
+api.workspace = true
 arc-swap = "1.5"
 auth.workspace = true
 common-catalog = { workspace = true }
