feat: improve object storage cache (#2522)
* feat: refactor object storage cache with moka

* chore: minor fixes

* fix: concurrent issues and invalidate cache after write/delete

* chore: minor changes

* fix: cargo lock

* refactor: rename

* chore: change DEFAULT_OBJECT_STORE_CACHE_SIZE to 256Mib

* fix: typo

* chore: style

* fix: toml format

* chore: toml

* fix: toml format

* Update src/object-store/src/layers/lru_cache/read_cache.rs

Co-authored-by: Ruihang Xia <waynestxia@gmail.com>

* chore: update Cargo.toml

Co-authored-by: Yingwen <realevenyag@gmail.com>

* chore: update src/object-store/Cargo.toml

Co-authored-by: Yingwen <realevenyag@gmail.com>

* chore: refactor and apply suggestions

* fix: typo

* feat: adds back allow list for caching

* chore: cr suggestion

Co-authored-by: Yingwen <realevenyag@gmail.com>

* chore: cr suggestion

Co-authored-by: Yingwen <realevenyag@gmail.com>

* refactor: wrap inner Accessor with Arc

* chore: remove run_pending_task in read and write path

* chore: the arc is unnecessary

---------

Co-authored-by: Ruihang Xia <waynestxia@gmail.com>
Co-authored-by: Yingwen <realevenyag@gmail.com>

--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -7,19 +7,20 @@ license.workspace = true
 [dependencies]
 async-trait = "0.1"
 bytes = "1.4"
-futures = { version = "0.3" }
-lru = "0.9"
+common-runtime.workspace = true
+common-telemetry.workspace = true
+futures.workspace = true
 md5 = "0.7"
 metrics.workspace = true
+moka = { workspace = true, features = ["future"] }
 opendal = { version = "0.40", features = [
     "layers-tracing",
     "layers-metrics",
 ] }
-pin-project = "1.0"
-tokio.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
 anyhow = "1.0"
 common-telemetry = { workspace = true }
 common-test-util = { workspace = true }
+tokio.workspace = true
