refactor: compare with origin bytes during the transaction

--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -13,6 +13,7 @@ arrow-flight.workspace = true
 async-stream.workspace = true
 async-trait.workspace = true
 base64 = "0.21"
+bytes = "1.4"
 common-catalog = { workspace = true }
 common-error = { workspace = true }
 common-grpc-expr.workspace = true
