--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -12,6 +12,7 @@ api = { workspace = true }
 arrow-flight.workspace = true
 async-stream.workspace = true
 async-trait.workspace = true
+base64 = "0.21"
 common-catalog = { workspace = true }
 common-error = { workspace = true }
 common-grpc-expr.workspace = true
