--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,8 +61,9 @@ license = "Apache-2.0"
 
 [workspace.dependencies]
 aquamarine = "0.3"
-arrow = { version = "43.0" }
-arrow-array = "43.0"
+arrow = { version = "43.0", features = ["simd"] }
+arrow-arith = { version = "43.0", features = ["simd"] }
+arrow-array = { version = "43.0", features = ["simd"] }
 arrow-flight = "43.0"
 arrow-schema = { version = "43.0", features = ["serde"] }
 async-stream = "0.3"
