--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -54,6 +54,7 @@ metrics.workspace = true
 # metrics-process 1.0.10 depends on metrics-0.21 but opendal depends on metrics-0.20.1
 metrics-process = { version = "<1.0.10", optional = true }
 mime_guess = "2.0"
+memmap2 = "0.7"
 num_cpus = "1.13"
 once_cell.workspace = true
 openmetrics-parser = "0.4"
