fix: add ObjectStoreManager::from_default

--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -63,3 +63,4 @@ uuid.workspace = true
 common-procedure-test = { workspace = true }
 common-test-util = { workspace = true }
 log-store = { workspace = true }
+object-store = { workspace = true, features = ["testing"] }
