--- a/src/object-store/Cargo.toml
+++ b/src/object-store/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+[features]
+testing = []
+
 [dependencies]
 async-trait = "0.1"
 bytes = "1.4"
