--- a/src/mito2/Cargo.toml
+++ b/src/mito2/Cargo.toml
@@ -22,6 +22,7 @@ chrono.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
 common-datasource.workspace = true
+common-decimal.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-procedure.workspace = true
