--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 api.workspace = true
 common-base.workspace = true
 common-catalog.workspace = true
+common-decimal.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
