--- a/src/common/catalog/Cargo.toml
+++ b/src/common/catalog/Cargo.toml
@@ -5,11 +5,9 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-common-error = { workspace = true }
-common-macro = { workspace = true }
-serde.workspace = true
-serde_json = "1.0"
-snafu = { version = "0.7", features = ["backtraces"] }
+common-error.workspace = true
+common-macro.workspace = true
+snafu.workspace = true
 
 [dev-dependencies]
 chrono.workspace = true
