--- a/src/common/meta/Cargo.toml
+++ b/src/common/meta/Cargo.toml
@@ -8,23 +8,22 @@ license.workspace = true
 testing = []
 
 [dependencies]
-api = { workspace = true }
-arrow-flight.workspace = true
+api.workspace = true
 async-recursion = "1.0"
 async-stream.workspace = true
 async-trait.workspace = true
-base64 = "0.21"
+base64.workspace = true
 bytes = "1.4"
-common-catalog = { workspace = true }
-common-error = { workspace = true }
+common-catalog.workspace = true
+common-error.workspace = true
 common-grpc-expr.workspace = true
-common-macro = { workspace = true }
-common-procedure = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
-datatypes = { workspace = true }
+common-macro.workspace = true
+common-procedure.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
+datatypes.workspace = true
 etcd-client.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
@@ -35,13 +34,13 @@ regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
-store-api = { workspace = true }
+store-api.workspace = true
 strum.workspace = true
-table = { workspace = true }
+table.workspace = true
 tokio.workspace = true
 tonic.workspace = true
 
 [dev-dependencies]
 chrono.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 hyper = { version = "0.14", features = ["full"] }
