--- a/src/common/recordbatch/Cargo.toml
+++ b/src/common/recordbatch/Cargo.toml
@@ -5,15 +5,15 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-common-error = { workspace = true }
-common-macro = { workspace = true }
+common-error.workspace = true
+common-macro.workspace = true
 datafusion-common.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 futures.workspace = true
 paste = "1.0"
 serde.workspace = true
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 
 [dev-dependencies]
 serde_json = "1.0"
