--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 testing = []
 
 [dependencies]
-api = { workspace = true }
+api.workspace = true
 arrow-flight.workspace = true
 async-compat = "0.2"
 async-stream.workspace = true
@@ -16,55 +16,55 @@ async-trait.workspace = true
 axum = "0.6"
 axum-macros = "0.3"
 bytes = "1.1"
-catalog = { workspace = true }
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-config = { workspace = true }
-common-datasource = { workspace = true }
-common-error = { workspace = true }
-common-function = { workspace = true }
-common-greptimedb-telemetry = { workspace = true }
-common-grpc = { workspace = true }
-common-grpc-expr = { workspace = true }
-common-macro = { workspace = true }
-common-meta = { workspace = true }
-common-procedure = { workspace = true }
-common-query = { workspace = true }
-common-recordbatch = { workspace = true }
-common-runtime = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+catalog.workspace = true
+common-base.workspace = true
+common-catalog.workspace = true
+common-config.workspace = true
+common-datasource.workspace = true
+common-error.workspace = true
+common-function.workspace = true
+common-greptimedb-telemetry.workspace = true
+common-grpc-expr.workspace = true
+common-grpc.workspace = true
+common-macro.workspace = true
+common-meta.workspace = true
+common-procedure.workspace = true
+common-query.workspace = true
+common-recordbatch.workspace = true
+common-runtime.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 dashmap = "5.4"
 datafusion-common.workspace = true
 datafusion-expr.workspace = true
 datafusion.workspace = true
-datatypes = { workspace = true }
-file-engine = { workspace = true }
+datatypes.workspace = true
+file-engine.workspace = true
 futures = "0.3"
 futures-util.workspace = true
 humantime-serde.workspace = true
 hyper = { version = "0.14", features = ["full"] }
 lazy_static.workspace = true
-log-store = { workspace = true }
-meta-client = { workspace = true }
-mito2 = { workspace = true }
-object-store = { workspace = true }
+log-store.workspace = true
+meta-client.workspace = true
+mito2.workspace = true
+object-store.workspace = true
 pin-project = "1.0"
 prometheus.workspace = true
 prost.workspace = true
-query = { workspace = true }
-reqwest = { workspace = true }
+query.workspace = true
+reqwest.workspace = true
 secrecy = { version = "0.8", features = ["serde", "alloc"] }
 serde.workspace = true
 serde_json = "1.0"
-servers = { workspace = true }
-session = { workspace = true }
-snafu = { version = "0.7", features = ["backtraces"] }
-sql = { workspace = true }
-storage = { workspace = true }
-store-api = { workspace = true }
-substrait = { workspace = true }
-table = { workspace = true }
+servers.workspace = true
+session.workspace = true
+snafu.workspace = true
+sql.workspace = true
+storage.workspace = true
+store-api.workspace = true
+substrait.workspace = true
+table.workspace = true
 tokio-stream = { version = "0.1", features = ["net"] }
 tokio.workspace = true
 toml.workspace = true
@@ -76,8 +76,8 @@ uuid.workspace = true
 
 [dev-dependencies]
 axum-test-helper = { git = "https://github.com/sunng87/axum-test-helper.git", branch = "patch-1" }
-client = { workspace = true }
-common-query = { workspace = true }
-common-test-util = { workspace = true }
+client.workspace = true
+common-query.workspace = true
+common-test-util.workspace = true
 datafusion-common.workspace = true
-session = { workspace = true }
+session.workspace = true
