--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -12,11 +12,11 @@ test = []
 arrow-array.workspace = true
 arrow-schema.workspace = true
 arrow.workspace = true
-common-base = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-telemetry = { workspace = true }
-common-time = { workspace = true }
+common-base.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-telemetry.workspace = true
+common-time.workspace = true
 datafusion-common.workspace = true
 enum_dispatch = "0.3"
 num = "0.4"
@@ -25,4 +25,4 @@ ordered-float = { version = "3.0", features = ["serde"] }
 paste = "1.0"
 serde.workspace = true
 serde_json = "1.0"
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
