--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -5,24 +5,24 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-api = { workspace = true }
-common-base = { workspace = true }
-common-catalog = { workspace = true }
-common-error = { workspace = true }
-common-macro = { workspace = true }
-common-query = { workspace = true }
-common-time = { workspace = true }
+api.workspace = true
+common-base.workspace = true
+common-catalog.workspace = true
+common-error.workspace = true
+common-macro.workspace = true
+common-query.workspace = true
+common-time.workspace = true
 datafusion-sql.workspace = true
-datatypes = { workspace = true }
+datatypes.workspace = true
 hex = "0.4"
 itertools.workspace = true
 lazy_static.workspace = true
 once_cell.workspace = true
 regex.workspace = true
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 sqlparser.workspace = true
 sqlparser_derive = "0.1"
-table = { workspace = true }
+table.workspace = true
 
 [dev-dependencies]
-common-datasource = { workspace = true }
+common-datasource.workspace = true
